[gd_scene load_steps=24 format=3 uid="uid://bhq2sy8vq7xdf"]

[ext_resource type="Script" path="res://Scripts/gameplay_script.gd" id="1_y3lv6"]
[ext_resource type="PackedScene" uid="uid://biya1spqddr43" path="res://Scenes/AudioPlayer.tscn" id="2_3ryrm"]
[ext_resource type="Texture2D" uid="uid://di41so3ucgiu6" path="res://Assets/crab_sprites.png" id="3_fwdxp"]
[ext_resource type="Script" path="res://Scripts/crab_script.gd" id="4_4skr6"]
[ext_resource type="Texture2D" uid="uid://dhypbw6wfpp4r" path="res://Assets/icon.svg" id="5_msgib"]
[ext_resource type="Script" path="res://Scripts/prey_detector.gd" id="6_33y5b"]
[ext_resource type="Script" path="res://Scripts/exclamation_spawn_position.gd" id="7_n2tx4"]
[ext_resource type="Script" path="res://Scripts/background_crabs.gd" id="8_sefpr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jd35i"]
atlas = ExtResource("3_fwdxp")
region = Rect2(4096, 4096, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_awj5f"]
atlas = ExtResource("3_fwdxp")
region = Rect2(0, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7y22"]
atlas = ExtResource("3_fwdxp")
region = Rect2(2048, 2048, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtm4e"]
atlas = ExtResource("3_fwdxp")
region = Rect2(2048, 4096, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_8j78q"]
atlas = ExtResource("3_fwdxp")
region = Rect2(6144, 4096, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdk47"]
atlas = ExtResource("3_fwdxp")
region = Rect2(0, 2048, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_420em"]
atlas = ExtResource("3_fwdxp")
region = Rect2(4096, 2048, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_3b02f"]
atlas = ExtResource("3_fwdxp")
region = Rect2(6144, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_kk5y8"]
atlas = ExtResource("3_fwdxp")
region = Rect2(2048, 0, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_2trgq"]
atlas = ExtResource("3_fwdxp")
region = Rect2(0, 4096, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0w2p"]
atlas = ExtResource("3_fwdxp")
region = Rect2(6144, 2048, 2048, 2048)

[sub_resource type="AtlasTexture" id="AtlasTexture_ar63b"]
atlas = ExtResource("3_fwdxp")
region = Rect2(4096, 0, 2048, 2048)

[sub_resource type="SpriteFrames" id="SpriteFrames_vi4th"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jd35i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awj5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7y22")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtm4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8j78q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdk47")
}],
"loop": false,
"name": &"snap_both",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_420em")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3b02f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kk5y8")
}],
"loop": false,
"name": &"snap_left",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2trgq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0w2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ar63b")
}],
"loop": false,
"name": &"snap_right",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n080v"]
size = Vector2(125.242, 273.512)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7drev"]
size = Vector2(50.304, 15.9657)

[node name="GamePlayScene" type="Node2D"]
script = ExtResource("1_y3lv6")

[node name="AudioStreamPlayer2D" parent="." instance=ExtResource("2_3ryrm")]
position = Vector2(134, 318)

[node name="CrabSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(548, 497)
scale = Vector2(0.182823, 0.155244)
sprite_frames = SubResource("SpriteFrames_vi4th")
animation = &"snap_right"
script = ExtResource("4_4skr6")

[node name="LeftPreyDetector" type="Sprite2D" parent="."]
position = Vector2(412, 413)
scale = Vector2(1.5344, 0.0577254)
texture = ExtResource("5_msgib")
script = ExtResource("6_33y5b")

[node name="PerfectArea" type="Area2D" parent="LeftPreyDetector"]
scale = Vector2(1, 0.201201)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftPreyDetector/PerfectArea"]
position = Vector2(1.30341, 0.000190735)
shape = SubResource("RectangleShape2D_n080v")

[node name="OkArea" type="Area2D" parent="LeftPreyDetector"]
scale = Vector2(1.00842, 0.730874)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftPreyDetector/OkArea"]
position = Vector2(0.651703, 17.3236)
rotation = 3.14159
scale = Vector2(2.24651, 37.7501)
shape = SubResource("RectangleShape2D_7drev")

[node name="ShitArea" type="Area2D" parent="LeftPreyDetector"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftPreyDetector/ShitArea"]
position = Vector2(0.651703, 17.3236)
rotation = 3.14159
scale = Vector2(2.24651, 61.3385)
shape = SubResource("RectangleShape2D_7drev")

[node name="ExclamationSpawnPosition" type="Node2D" parent="LeftPreyDetector"]
position = Vector2(86.6788, -1281.93)
script = ExtResource("7_n2tx4")

[node name="RightPreyDetector" type="Sprite2D" parent="."]
position = Vector2(690, 412)
scale = Vector2(1.5344, 0.0577254)
texture = ExtResource("5_msgib")
script = ExtResource("6_33y5b")
input = "key_right"

[node name="ExclamationSpawnPosition" type="Node2D" parent="RightPreyDetector"]
position = Vector2(-94.4995, -1264.61)
scale = Vector2(1, 1)
script = ExtResource("7_n2tx4")

[node name="PerfectArea" type="Area2D" parent="RightPreyDetector"]
scale = Vector2(1, 0.160004)

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightPreyDetector/PerfectArea"]
position = Vector2(1.30341, 0.000190735)
shape = SubResource("RectangleShape2D_n080v")

[node name="OkArea" type="Area2D" parent="RightPreyDetector"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightPreyDetector/OkArea"]
position = Vector2(0.651703, 17.3236)
rotation = 3.14159
scale = Vector2(2.24349, 27.5573)
shape = SubResource("RectangleShape2D_7drev")

[node name="ShitArea" type="Area2D" parent="RightPreyDetector"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightPreyDetector/ShitArea"]
position = Vector2(0.651703, 17.3236)
rotation = 3.14159
scale = Vector2(2.24651, 61.3385)
shape = SubResource("RectangleShape2D_7drev")

[node name="BackgroundCrabs" type="Node2D" parent="."]
script = ExtResource("8_sefpr")

[node name="ScoreBoard" type="Label" parent="."]
offset_left = 13.0
offset_top = 18.0
offset_right = 53.0
offset_bottom = 41.0
scale = Vector2(4.83963, 4.83963)
text = "balls"

[connection signal="animation_finished" from="CrabSprite" to="CrabSprite" method="_on_animation_finished"]
[connection signal="area_entered" from="LeftPreyDetector/PerfectArea" to="LeftPreyDetector" method="_on_perfect_area_area_entered"]
[connection signal="area_exited" from="LeftPreyDetector/PerfectArea" to="LeftPreyDetector" method="_on_perfect_area_area_exited"]
[connection signal="area_entered" from="LeftPreyDetector/OkArea" to="LeftPreyDetector" method="_on_ok_area_area_entered"]
[connection signal="area_exited" from="LeftPreyDetector/OkArea" to="LeftPreyDetector" method="_on_ok_area_area_exited"]
[connection signal="area_entered" from="LeftPreyDetector/ShitArea" to="LeftPreyDetector" method="_on_shit_area_area_entered"]
[connection signal="area_exited" from="LeftPreyDetector/ShitArea" to="LeftPreyDetector" method="_on_shit_area_area_exited"]
[connection signal="area_entered" from="RightPreyDetector/PerfectArea" to="RightPreyDetector" method="_on_perfect_area_area_entered"]
[connection signal="area_exited" from="RightPreyDetector/PerfectArea" to="RightPreyDetector" method="_on_perfect_area_area_exited"]
[connection signal="area_entered" from="RightPreyDetector/OkArea" to="RightPreyDetector" method="_on_ok_area_area_entered"]
[connection signal="area_exited" from="RightPreyDetector/OkArea" to="RightPreyDetector" method="_on_ok_area_area_exited"]
[connection signal="area_entered" from="RightPreyDetector/ShitArea" to="RightPreyDetector" method="_on_shit_area_area_entered"]
[connection signal="area_exited" from="RightPreyDetector/ShitArea" to="RightPreyDetector" method="_on_shit_area_area_exited"]
